style fix broken third store header template
The third store header has broken title styling that causes overlap

--- a/assets/src/less/store.less
+++ b/assets/src/less/store.less
@@ -1097,7 +1097,7 @@
 
                             .profile-info {
                                 position: absolute;
-                                top: 15%;
+                                top: 33%;
 
                                 .store-name {
                                     color: inherit;
